fix: fix gap in header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,7 +13,7 @@
   &_wrapper {
     display: flex;
     justify-content: space-between;
-    column-gap: 2.5rem;
+    column-gap: 1rem;
     row-gap: 1rem;
 
     @media (max-width: $mobile-screen) {
